# acceslibre

./: .babelrc  .buildpacks  .dockerignore  .editorconfig  .env.sample  .eslintrc.json  .flake8  .gitignore  .isort.cfg  .npmrc  .postcssrc  .pre-commit-config.yaml  .prettierignore  .slugignore  .talismanrc  Aptfile  Dockerfile  LICENSE.md  Makefile  Pipfile  Procfile  README.md  conftest.py  cron.json  docker-compose.yml  elm-analyse.json  elm.json  makegraphs.sh  manage.py  package-lock.json  package.json  pnpm-lock.yaml  postdeploy.sh  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  ruff.toml  (+4 more)
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  lint.yml
access4all/: asgi.py  settings.py  settings_dev.py  settings_prod.py  settings_test.py  urls.py  wsgi.py
access4all/access4all/: asgi.py  settings.py  wsgi.py
access4all/erp/: admin.py  apps.py  views.py
annuaire/: apps.py  urls.py  views.py
api/: filters.py  permissions.py  renderers.py  serializers.py  tests.py  urls.py  views.py
auth/: apps.py  forms.py  models.py  service.py  urls.py  views.py
auth/migrations/: 0001_initial.py  0002_auto_20210613_1231.py
compte/: admin.py  apps.py  auth.py  forms.py  models.py  resources.py  serializers.py  service.py  signals.py  tasks.py  urls.py  views.py
compte/migrations/: 0001_initial.py  0002_userpreferences.py  0003_auto_20210629_1730.py  0003_auto_20210701_1337.py  0004_alter_userpreferences_user.py  0004_auto_20210701_1028.py  0004_user_stats.py  0005_profanity.py  0006_userpreferences_newsletter_opt_in.py  0007_alter_userpreferences_newsletter_opt_in.py  0008_nb_erp_administrator.py
contact/: admin.py  forms.py  models.py  translation.py  urls.py  views.py
contact/fixtures/: faq.json
contact/migrations/: 0001_initial.py  0001_initial_squashed_0008_remove_vaccination_topic.py  0002_auto_20200908_1551.py  0003_auto_20200914_1638.py  0003_auto_20200914_1720.py  0004_merge_20200916_1733.py  0005_alter_message_topic.py  0006_alter_message_email.py  0007_api_key.py  0008_remove_vaccination_topic.py  0009_faq.py  0010_alter_faq_section.py
core/: __init__.py  asgi.py  cache.py  db.py  mailer.py  mattermost.py  middleware.py  paginator.py  sentry.py  settings.py  settings_dev.py  settings_prod.py  settings_recette.py  settings_test.py  sitemaps.py  storage.py  urls.py  views.py  worker.py  wsgi.py
core/lib/: calc.py  diff.py  geo.py  sql.py  text.py  (+2 more)
data/: Mairies.tsv  README.md  arrondissements.json  centres-vaccination.json  contours.json  culture_gamma.csv  generic.csv  import_generic.csv  nestenn.csv  responses_musees.tsv  restaurant_gamma.csv  th-20200505.csv
erp/: activites.py  admin.py  apps.py  auth.py  communes.py  contribution.py  dataclasses.py  departements.py  domaines.py  duplicates.py  exceptions.py  fields.py  forms.py  geocode.py  geocoder.py  imports.py  manager.py  managers.py  models.py  naf.py  public_erp.py  resources.py  schema.py  serializers.py  signals.py  sirene.py  tasks.py  tests.py  translation.py  urls.py  utils.py  versioning.py  views.py  widget_utils.py
fuzzywuzzy_custom/: StringMatcher.py  __init__.py  fuzz.py  process.py  string_processing.py  utils.py
public/: app2.js  index.html
src/: Main.elm  Ports.elm  Route.elm
static/: index.js  manifest.webmanifest  parcel-entry.js  styles.js
stats/: admin.py  apps.py  matomo.py  metabase.py  middleware.py  models.py  queries.py  signals.py  tasks.py  tests.py  urls.py  views.py
subscription/: admin.py  managers.py  models.py  urls.py  views.py
templates/: 403.html  404.html  500.html  503.html  base.html  communes.html  index.html  mapicons.html  matomo.html  panoramax.html  search-results.html  search.html  sitemap.html  sw.js  swagger-ui.html
tests/: factories.py  fixtures.py  utils.py
(+63824 files in other folders)
